test/sematest/invalid/missing_main.java
class System {
    public static void man(String[] args) {
        System[] sys = new system[10];
    }
}
